--- a/hello.html
+++ b/hello.html
@@ -5,8 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
-    
+    <h1>OTRO TITULO</h1>
+    <div>modificaciones estilos</div>
+    <div>modificaciones estilos</div>
+    <div>modificaciones estilos</div>
 </body>
 </html>
