--- a/hello.html
+++ b/hello.html
@@ -9,10 +9,16 @@
 </head>
 <body>
     <h1>OTRO TITULO</h1>
-    <div>modificaciones estilos</div>
+    <div>modificaciones estilos CONFLICTO DESDE ESTILO2</div>
     <div>modificaciones estilos</div>
     <div>modificaciones estilos</div>
     <div>Parrafo para Modificacion1</div>
     <div>Parrafo para Modificacion1</div>
+
+    <div class="modificacion3">Parrafo para Modificacion3</div>
+    <div class="modificacion3">Parrafo para Modificacion3</div>
+        
 </body>
+
+
 </html>
