intento de conflicto desde main

--- a/hello.html
+++ b/hello.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>OTRO TITULO</h1>
-    <div>modificaciones estilos</div>
+    <div>modificaciones estilos CONFLICTO DESDE MAIN</div>
     <div>modificaciones estilos</div>
     <div>modificaciones estilos</div>
     <div>Parrafo para Modificacion1</div>
